--- a/global_rrt_planner/CMakeLists.txt
+++ b/global_rrt_planner/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(global_rrt_planner)
 
+## Add support for C++11, supported in ROS Kinetic and newer
+add_definitions(-std=c++11)
+
 find_package(catkin REQUIRED
   COMPONENTS
     angles
