--- a/navigation_features_3d/package.xml
+++ b/navigation_features_3d/package.xml
@@ -29,7 +29,8 @@
   <!-- Dependencies can be catkin packages or system dependencies -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>cmake_modules</build_depend>
-  <!--build_depend>costmap_2d</build_depend-->
+  <build_depend>pcl_filters</build_depend>
+  <!--build_depend>rrt_planners</build_depend-->
   <build_depend>geometry_msgs</build_depend>
   <build_depend>laser_geometry</build_depend>
   <build_depend>pcl_conversions</build_depend>
@@ -46,7 +47,8 @@
   <build_depend>dynamic_reconfigure</build_depend>
 
   <run_depend>cmake_modules</run_depend>
-  <!--run_depend>costmap_2d</run_depend-->
+  <run_depend>pcl_filters</run_depend>
+  <!--run_depend>rrt_planners</run_depend-->
   <run_depend>geometry_msgs</run_depend>
   <run_depend>laser_geometry</run_depend>
   <run_depend>pcl_conversions</run_depend>
