--- a/rrt_planners/launch/navigation_params.yaml
+++ b/rrt_planners/launch/navigation_params.yaml
@@ -54,18 +54,22 @@ RRT_ros_wrapper:
   # RRT planner to use
   # 1 -> RRT (no kinodynamics)
   # 2 -> RRTstar (no kinodynamics)
-  # 3 -> Kinodynamic RRT
-  # 4 -> Kinodynamic RRTstar 
-  # 5 -> Kinodynamic simplified RRTstar
+  # 3 -> Q-RRTstar (no kinodynamics)
+  # 4 -> Kinodynamic RRT
+  # 5 -> Kinodynamic RRTstar 
+  # 6 -> Kinodynamic simplified RRTstar
   rrt_planner_type:           2 
-  rrt_solve_time:             5.5 
+  rrt_solve_time:             5.0 #for nfe,bfe: 7.8, for cf: 5.0 
   rrt_goal_bias:              0.07 #0.06 #0.05 
-  rrt_max_insertion_dist:     0.25 0.60<-3 0.25<-2  0.50 o 1.0<-4
-  rrt_goal_xyz_tol:           0.15 #0.12
+  rrt_max_insertion_dist:     0.25 #0.60<-3 0.25<-2  0.50 o 1.0<-4
+  rrt_goal_xyz_tol:           0.25 #0.12
   rrt_goal_th_tol:            0.12
   # If we want to interpolate the resulting path
   # if we don't. This value should be 0 or below 0.
   rrt_interpolate_path_dist:  0.1
+
+  #Only in case of using Quick-RRTstar
+  quick_rrt_depth:            1
 
   # path smoothing
   path_smoothing:             true
@@ -78,7 +82,9 @@ RRT_ros_wrapper:
   use_external_pc_as_samples: true
   pc_topic:                   pcl_filters_node_1/rrt_pointcloud_samples  #pcl_filters_node_2/features_pointcloud
   
+  features_name:              navigation_features_3d
 
+  planning_frame:             indires_rover/odom
   robot_base_frame:           indires_rover/base_link
   robot_odom_frame:           indires_rover/odom
   robot_pc_sensor_frame:      indires_rover/front_rgbd_camera/depth_optical_frame
@@ -152,17 +158,16 @@ RRT_ros_wrapper:
 navigation_features_3d:
 
   pointcloud_topic:           pcl_filters_node_2/features_pointcloud #point_map #indires_rover/front_rgbd_camera/front_rgbd_camera/depth/points #pcl_filters_node/PointCloud_filtered 
+
   robot_circuns_radius:       0.40
   max_pitch_inclination:      0.8  #0.79 rad = 45º   0.87 = 50ª
   max_roll_inclination:       0.8
   max_roughness:              0.8 #0.15 #0.8
-  min_points_allowed:         18 #20
+  min_points_allowed:         12 #18 #20
 
   robot_base_frame:           indires_rover/base_link
   robot_odom_frame:           indires_rover/odom
   robot_odom_topic:           indires_rover/odom_filtered  #icp_odom
-  
-  nfe_exploration:            true
   
   feature_set:                2
   
@@ -190,10 +195,40 @@ navigation_features_3d:
                               # goal_dist
   w7:                         0.175
   
+  #EXPLORATION
+  exp_pc_service_name:        pcl_filters_node_4/get_filtered_pc
+
+  visited_region_enabled:     true
+  remove_wall_frontier_enabled: true
+  variable_size_enabled:      true
+
+  # if NFE and BFE are false, CFE is used (Cost Function Exploration)
+  nf_exploration:             false
+  bf_exploration:             false
+  threshold_frontier:         0.4   #best=0.4  high=0.65
+  adaptative_threshold:       true
+
+  num_points_saturation:      3200.0
+#  numpoint_cost_limit:        0.62
+  percentage_limit:           0.85
+
+  min_planning_size:          5.0
+  max_planning_size:          13.0
+  cell_size_grid_exp:         0.07
+
+  #Weights for the exploration cost function
+                              # num_points
+  wexp1:                      0.39    
+                              # no return   
+  wexp2:                      0.305    
+                              # rrt path cost
+  wexp3:                      0.305
+                              # goal cost
+#  wexp4:                      0.2
+
+  exp_min_dist_goals:         1.5
   
-  # Visualization
-  #publish_cost_pc:            true
-  #cost_topic_pc:              pcl_filters_node_1/rrt_pointcloud_samples 
+  
 
   
 
