--- a/indires_macro_actions/package.xml
+++ b/indires_macro_actions/package.xml
@@ -54,7 +54,7 @@
   <!--build_depend>upo_navigation</build_depend-->
   <build_depend>adapted_move_base</build_depend>
   <build_depend>common_rosdeps</build_depend>
-  <build_depend>yaml-cpp</build_depend>
+  <!--build_depend>yaml-cpp</build_depend-->
   <!--build_depend>dynamic_reconfigure</build_depend-->
 
 
@@ -71,7 +71,7 @@
   <run_depend>tf</run_depend>
   <!--run_depend>upo_navigation</run_depend-->
   <run_depend>adapted_move_base</run_depend>
-  <run_depend>yaml-cpp</run_depend>
+  <!--run_depend>yaml-cpp</run_depend-->
   <run_depend>common_rosdeps</run_depend>
   <!--run_depend>dynamic_reconfigure</run_depend-->
 
