--- a/global_rrt_planner/CMakeLists.txt
+++ b/global_rrt_planner/CMakeLists.txt
@@ -3,6 +3,7 @@ project(global_rrt_planner)
 
 ## Add support for C++11, supported in ROS Kinetic and newer
 add_definitions(-std=c++11)
+add_compile_options(-std=c++11 -fext-numeric-literals)
 
 find_package(catkin REQUIRED
   COMPONENTS
